syntax = "proto3";

import "dto/indu.proto";
import "dto/mark.proto";
option java_package = "com.itp.youtube.grpc.service";

package grpc.service;

service RouteGuide {

  rpc GetFeature(grpc.dto.Message1) returns (grpc.dto.Message2) {}


  rpc ListFeatures(grpc.dto.Message2) returns (grpc.dto.Message1) {}

}

